# stream_beginner_guide

./: .gitignore  CMakeLists.txt  MyCin.cpp  MyCout.cpp  MyFileStream.cpp  MyOStringStream.cpp  MyOfstream.cpp  MyString.cpp  MyStringStream.cpp  MyStringStream2.cpp  README.md  cerr_example.cpp  clog_example.cpp  ifstream_example.cpp  istringstream_example.cpp  main.cpp  my_cerr.cpp  my_clog.cpp  my_ifstream.cpp  ofstream_example.cpp
fstream/: ifstream_example.cpp
iostream/: cin_example.cpp  cout_example.cpp
sstream/: ostringstream_example.cpp  stringstream_example.cpp
